3-тья практика выполнена

--- a/BikeRentalAPI/appsettings.json
+++ b/BikeRentalAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgreConnection": "Host=localhost;Port=5432;Database=bikeapidb;Username=postgres;Password=12344321"
+    "PostgreConnection": "Host=localhost;Port=5432;Database=bikedbapi;Username=postgres;Password=12344321"
   },
   "Logging": {
     "LogLevel": {
