--- a/BikeRentalAPI/appsettings.json
+++ b/BikeRentalAPI/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "PostgreConnection": "Host=localhost;Port=5432;Database=bikedbapi;Username=postgres;Password=12344321"
   },
+  "Jwt": {
+    "Key": "secret_jwt_key_for_bike_rental_hihihaha",
+    "Issuer": "BikeRentalAPI",
+    "Audience": "BikeRentalUsers",
+    "ExpireHours": 24
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
